--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.28.9",
     "@tanstack/react-query-devtools": "^5.28.10",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-activity": "^2.1.3",
     "react-dom": "^18.2.0",
